samples/_failures_safe/1761268075_6a2f84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59675800.c: In function ‘main’:
./samples/SAFE/__tmp_59675800.c:136:18: error: ‘get’ undeclared (first use in this function); did you mean ‘getc’?
  136 |     int choice = get
      |                  ^~~
      |                  getc
./samples/SAFE/__tmp_59675800.c:136:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_59675800.c:136:5: error: expected ‘,’ or ‘;’ at end of input
  136 |     int choice = get
      |     ^~~
./samples/SAFE/__tmp_59675800.c:136:5: error: expected declaration or statement at end of input
